{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 13,
  "lineage": "5a446d9e-89a2-971c-37a3-f353076250b5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-021a35816ba1d6a0a",
            "domain": "vpc",
            "id": "eipalloc-021a35816ba1d6a0a",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-137-53-173.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.53.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920042617163:internet-gateway/igw-0fc0a5b0dd726cc27",
            "id": "igw-0fc0a5b0dd726cc27",
            "owner_id": "920042617163",
            "tags": {
              "Name": "dev_natgw"
            },
            "tags_all": {
              "Name": "dev_natgw"
            },
            "vpc_id": "vpc-0534b9bb6b7c086b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-021a35816ba1d6a0a",
            "association_id": "eipassoc-0632b497f79d52519",
            "connectivity_type": "public",
            "id": "nat-0d47bd435f4774440",
            "network_interface_id": "eni-00b1ba15faaa3abdc",
            "private_ip": "10.0.3.221",
            "public_ip": "3.137.53.173",
            "subnet_id": "subnet-081e2b2b97e379a02",
            "tags": {
              "Name": "dev_natgw"
            },
            "tags_all": {
              "Name": "dev_natgw"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.dev_igw",
            "aws_subnet.public_subnet_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920042617163:route-table/rtb-0711e7327bd3e478d",
            "id": "rtb-0711e7327bd3e478d",
            "owner_id": "920042617163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d47bd435f4774440",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_private_rt"
            },
            "tags_all": {
              "Name": "dev_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0534b9bb6b7c086b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_natgw",
            "aws_subnet.public_subnet_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920042617163:route-table/rtb-045fafd54babfb912",
            "id": "rtb-045fafd54babfb912",
            "owner_id": "920042617163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc0a5b0dd726cc27",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_rt"
            },
            "tags_all": {
              "Name": "dev_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0534b9bb6b7c086b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_private_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfaae185f1a59c88",
            "route_table_id": "rtb-0711e7327bd3e478d",
            "subnet_id": "subnet-04cb18f4df98a7097"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_natgw",
            "aws_route_table.dev_private_rt",
            "aws_subnet.private_subnet_a",
            "aws_subnet.public_subnet_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_private_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087d75b27b3ec0924",
            "route_table_id": "rtb-0711e7327bd3e478d",
            "subnet_id": "subnet-03580849e9c4d7b01"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.dev_igw",
            "aws_nat_gateway.dev_natgw",
            "aws_route_table.dev_private_rt",
            "aws_subnet.private_subnet_b",
            "aws_subnet.public_subnet_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_public_c_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059834a250b5bdbc9",
            "route_table_id": "rtb-045fafd54babfb912",
            "subnet_id": "subnet-081e2b2b97e379a02"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.dev_rt",
            "aws_subnet.public_subnet_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920042617163:subnet/subnet-04cb18f4df98a7097",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cb18f4df98a7097",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920042617163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_subnet_a"
            },
            "tags_all": {
              "Name": "dev_subnet_a"
            },
            "vpc_id": "vpc-0534b9bb6b7c086b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920042617163:subnet/subnet-03580849e9c4d7b01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03580849e9c4d7b01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "920042617163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_subnet_b"
            },
            "tags_all": {
              "Name": "dev_subnet_b"
            },
            "vpc_id": "vpc-0534b9bb6b7c086b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920042617163:subnet/subnet-081e2b2b97e379a02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081e2b2b97e379a02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "920042617163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_subnet_b"
            },
            "tags_all": {
              "Name": "dev_subnet_b"
            },
            "vpc_id": "vpc-0534b9bb6b7c086b2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:920042617163:vpc/vpc-0534b9bb6b7c086b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09cba7e77364136e9",
            "default_route_table_id": "rtb-0690a1ec2fa802b8b",
            "default_security_group_id": "sg-00ab2bafd7eb07319",
            "dhcp_options_id": "dopt-01cb9dd394a38c5bc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0534b9bb6b7c086b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0690a1ec2fa802b8b",
            "owner_id": "920042617163",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}